projects/compiler/test/typechecker/indexing/error_indexing_tuple_nullable.out
Error at %FILE_NAME%:2:1
Unsupported indexing operation
  |  pair[0]
     ^
Type '(Int, String)?' is not indexable
